--- a/src/main/webapp/resources/channel/channelRecipt.xhtml
+++ b/src/main/webapp/resources/channel/channelRecipt.xhtml
@@ -333,6 +333,22 @@
                                             </h:outputLabel>
                                         </td>
                                     </tr>
+                                    <tr>
+                                        <td>
+                                            <h:outputLabel value="Paid Bill ID" ></h:outputLabel>
+                                        </td>
+                                        <td>
+                                            <p:spacer width="10" ></p:spacer>
+                                        </td>
+                                        <td>
+                                            <h:outputLabel value=":" ></h:outputLabel>
+                                        </td>
+                                        <td>
+                                            <h:outputLabel value="#{cc.attrs.bill.paidBill.id}" 
+                                                           >
+                                            </h:outputLabel>
+                                        </td>
+                                    </tr>
                                 </table>
                             </td>
                         </td>
