Closes #491 Signed-off-by: buddhika75 <buddhika.ari@gmail.com>

--- a/src/main/webapp/admin/bill_contact_numbers.xhtml
+++ b/src/main/webapp/admin/bill_contact_numbers.xhtml
@@ -60,7 +60,7 @@
                                 <p:dataExporter target="tb1" type="xls" fileName="Contacts" />
                             </p:commandButton>
                             <p:outputLabel value="Message" />
-                            <p:inputText mask="" maxlength="160" style="height: 50px;" value="#{searchController.smsText}"></p:inputText>
+                            <p:inputText maxlength="160" style="height: 50px;" value="#{searchController.smsText}"></p:inputText>
 
                             <p:outputLabel value="Test Send" />
                             <p:inputText  maxlength="11" style="height: 20px;" value="#{searchController.uniqueSmsText}"></p:inputText>
