--- a/src/main/webapp/inward/inward_timed_item_category.xhtml
+++ b/src/main/webapp/inward/inward_timed_item_category.xhtml
@@ -12,7 +12,7 @@
 
         <h:panelGroup >
             <h:form  >
-                <p:growl autoUpdate="true" />
+                <p:growl/>
                 <p:focus id="selectFocus" context="gpSelect" />
                 <p:focus id="detailFocus" context="gpDetail" />
                 <p:panel header="Manage Timed Item Category" >
