--- a/src/main/webapp/resources/ezcomp/login.xhtml
+++ b/src/main/webapp/resources/ezcomp/login.xhtml
@@ -1,5 +1,4 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:cc="http://xmlns.jcp.org/jsf/composite"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
@@ -11,31 +10,40 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <p:panel header="Please login" id="loginbox" style="text-align: center; " styleClass="nonPrintBlock verticalAndHorizontalCentering">
-            <h:panelGrid columns="2" >
-                <h:panelGroup >
-                    <h:graphicImage  library="image" name="lock.png" />
-                </h:panelGroup>
-                <h:panelGroup >
-                    <h:form id="formLogin">
-                        <h:panelGrid columns="2">
-                            <h:outputLabel value="Username"  style="text-align: left; margin: 5px; padding: 5px;"  ></h:outputLabel>
-                            <p:inputText autocomplete="off" id="txtUserName"
-                                         value="#{sessionController.userName}"
-                                         style="text-align: left; margin: 5px; padding: 5px;" ></p:inputText>
-                            <h:outputLabel value="Password"  style="text-align: left; margin: 5px; padding: 5px;" ></h:outputLabel>
-                            <p:password id="txtPassword" value="#{sessionController.passord }"  style="text-align: left; margin: 5px; padding: 5px;" ></p:password>
-                            <h:outputLabel value=""  style="text-align: left; margin: 5px; padding: 5px;" ></h:outputLabel>
-                            <p:commandButton value="Login" 
-                                             id="btnLogin"
-                                             ajax="false"
-                                             action="#{sessionController.loginActionWithoutDepartment()}" >
-                            </p:commandButton>
-                        </h:panelGrid>
-                    </h:form>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-6 col-lg-4 col-sm-8 col-xs-12 mt-5">
+                    <div class="card">
+                        <div class="card-header d-flex align-items-center">
+                            <h:graphicImage library="image" name="lock.png" alt="Logo" style="max-width: 100%; height: auto;"/>
+                            <div class="flex-grow-1">
+                                <h4>Please Login</h4>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h:form id="formLogin">
+                                <div class="form-group">
+                                    <label for="txtUserName">Username:</label>
+                                    <h:inputText autocomplete="off" id="txtUserName"
+                                                 value="#{sessionController.userName}"
+                                                 class="form-control"></h:inputText>
+                                </div>
+                                <div class="form-group">
+                                    <label for="txtPassword">Password:</label>
+                                    <h:inputSecret id="txtPassword" value="#{sessionController.passord }"
+                                                   class="form-control"></h:inputSecret>
+                                </div>
+                                <div class="text-center">
+                                    <h:commandButton value="Login" id="btnLogin"
+                                                     action="#{sessionController.loginActionWithoutDepartment()}"
+                                                     class="btn btn-primary"></h:commandButton>
+                                </div>
+                            </h:form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-                </h:panelGroup>
-            </h:panelGrid>
-        </p:panel>
     </cc:implementation>
 </html>
