Signed-off-by: buddhika75 <buddhika.ari@gmail.com>

--- a/src/main/webapp/clinical/patient_profile.xhtml
+++ b/src/main/webapp/clinical/patient_profile.xhtml
@@ -175,7 +175,7 @@
                                     </p:dataTable>
                                 </p:tab>
                                 <p:tab title="Visit Details" >
-                                    <p:dataTable id="tblPastVisits" value="#{patientEncounterController.currentPatientEncounters}"
+                                    <p:dataTable id="tblPastVisits" value="#{patientEncounterController.encounters}"
                                                  var="pe"
                                                  >
                                         <p:column headerText="Visit Date" >
